# Simulation_Model

./: SEIR.py  gaussian_curve_fit.py  main.py  person.py  pyproject.toml  simulation.py
SIR model/: agent.py  model.py  run.py
